--- a/index.html
+++ b/index.html
@@ -4,17 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital@0;1&display=swap" rel="stylesheet">
     <title>First Assignment</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="top-banner">
+        <div>
+            <h1>Let us Come Forward to Help the Flood victims <br>Learn More</h1>
+                <p>
+                    2022 is a year of great hardship for the people of Sylhet.This year is the biggest flood in the history of the country.<br>All the areas of the region are flooded by this flood. There is a lot of loss of human life and property.
+                </p>
+                <a class="link-button" href="https://web.facebook.com/hmathikur.rahman.7">Donete Now</a>
+        </div>
+    </section>
     <section>
         <div>
-            <h1>Let us Come Forward to Help the Flood victims Learn More</h1>
-                <p>
-                    2022 is a year of great hardship for the people of Sylhet.This year is the biggest flood in the history of the country.All the areas of the region are flooded by this flood. There is a lot of loss of human life and property.
-                </p>
-                <a href="https://web.facebook.com/hmathikur.rahman.7">Donete Now</a>
+            <h1>Donate Today</h1>
+            <p class="donate-today">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                <br>deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="flaxible-container">
+            <h2 id="tk">100tk</h2>
+            <h2 id="tk" class="border-tk">500ta</h2>
+            <h2 id="tk">1000tk</h2>
+            <h2 id="tk">2000</h2>
+            <h2 id="tk">5000</h2>
+        </div>
+        <div>
+            <h3>Other Amaount (Taka)</h3>
+            <a class="link-button" href="https://web.facebook.com/hmathikur.rahman.7">Donete Now</a>
         </div>
     </section>
 </body>
