--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section>
         <div>
-            <h1>Donate Today</h1>
+            <h1 class="donate-tk">Donate Today</h1>
             <p class="donate-today">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
                 <br>deterruisset. No duo populo animal noluisse, enim</p>
         </div>
@@ -30,13 +30,50 @@
             <h2 id="tk">100tk</h2>
             <h2 id="tk" class="border-tk">500ta</h2>
             <h2 id="tk">1000tk</h2>
-            <h2 id="tk">2000</h2>
-            <h2 id="tk">5000</h2>
+            <h2 id="tk">2000tk</h2>
+            <h2 id="tk">5000tk</h2>
         </div>
         <div>
             <h3>Other Amaount (Taka)</h3>
             <a class="link-button" href="https://web.facebook.com/hmathikur.rahman.7">Donete Now</a>
         </div>
     </section>
+    <Section>
+        <div>
+            <h1 class="donate-tk">Our Donate Plan</h1>
+            <p class="donate-today">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                <br>deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="flaxible-container" >
+            <div id="donate-plan">
+                <img src="icons/food.png" alt="">
+                <h1 class="donate-font">Food for a family</h1>
+                <p class="donate-today">Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit</p>
+            </div>
+            <div id="donate-plan">
+                <img src="icons/shelter.png" alt="">
+                <h1 class="donate-font">Shelter for a famil</h1>
+                <p class="donate-today">Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+            <div id="donate-plan">
+                <img src="icons/medicine.svg" alt="">
+                <h1 class="donate-font">Education for a child</h1>
+                <p class="donate-today">Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+        </div>
+    </Section>
 </body>
+<footer>
+    <h1>Be Humbl</h1>
+    <p>I’m gonna do i</p>
+</footer>
 </html>
